<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SafeCycle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cycle_safe_settings">SafeCycleSettings</string>
    <string name="settings_instructions">Set the volume for each speed zone using the sliders.</string>
    <string name="kph">KPH</string>
    <string name="mph">MPH</string>
    <string name="current_text">Current units: </string>
    <string name="change">Change</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="current_speed">Current Speed:</string>
    <string name="speed">No Speed</string>
    <string name="reset_settings">Reset All Settings</string>
    <string name="distance_title">Total Distance</string>
    <string name="total_distance">No Distance</string>
    <string name="distance">Total Distance:</string>
    <string name="distance_num">No Distance</string>
    <string name="distance_units">Miles</string>
    <string name="miles">Miles</string>
    <string name="kilometers">Kilometers</string>
    <string name="pause">Pause</string>
	<string name="resume">Resume</string>
	<string name="stop">Stop</string>
	<string name="speedo_content_description">Speedometer Background</string>
</resources>
