<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context=".SafeCycle" >

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/start_button" />

    <ImageView
        android:id="@+id/speedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:src="@drawable/speedback"
        android:contentDescription="@string/speedo_content_description" />
    
    <TextView
        android:id="@+id/current_speed_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/speedback"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/current_speed"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/main_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/speed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/mph"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_speed_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/speed"
        android:textSize="50sp" />
    
    <TextView
        android:id="@+id/distance_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_units"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/distance"
        android:textSize="20sp" />
    
    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/distance_num"
        android:textSize="32sp" />
    <TextView
        android:id="@+id/distance_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/distance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/distance_units"
        android:textSize="20sp" />

    <Button
        android:id="@+id/pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_button"
        android:layout_alignBottom="@+id/start_button"
        android:layout_alignLeft="@+id/speedback"
        android:text="@string/pause" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/start_button"
        android:layout_alignBottom="@+id/start_button"
        android:layout_alignRight="@+id/speedback"
        android:text="@string/stop" />

  <com.google.ads.AdView
      android:id="@+id/adView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      ads:adSize="BANNER"
      ads:adUnitId="ca-app-pub-6242967442096769/7358320130"
      ads:loadAdOnCreate="true"
      ads:testDevices="TEST_EMULATOR, TEST_DEVICE_ID" >

  </com.google.ads.AdView>
        
</RelativeLayout>
