<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SettingsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".SafeCycleSettings" >

        <TextView
            android:id="@+id/units_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="25dp"
            android:text="@string/current_text" />

        <TextView
            android:id="@+id/selected_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/units_text"
            android:layout_alignBottom="@+id/units_text"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/units_text"
            android:text="@string/mph" />

        <Button
            android:id="@+id/change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="30dp"
            android:layout_marginTop="25dp"
            android:text="@string/change" />

        <TextView
            android:id="@+id/instructions_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/change_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/settings_instructions" />
"

        <SeekBar
            android:id="@+id/seek_s0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/instructions_settings"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="20dp"
            android:layout_toRightOf="@+id/s0_text" />

        <SeekBar
            android:id="@+id/seek_s1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_s0"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seek_s0"
            android:layout_marginTop="25dp" />

        <SeekBar
            android:id="@+id/seek_s2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_s0"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seek_s1"
            android:layout_marginTop="25dp" />

        <SeekBar
            android:id="@+id/seek_s3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_s0"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seek_s2"
            android:layout_marginTop="25dp" />

        <SeekBar
            android:id="@+id/seek_s4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_s0"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seek_s3"
            android:layout_marginTop="25dp" />

        <SeekBar
            android:id="@+id/seek_s5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_s0"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seek_s4"
            android:layout_marginTop="25dp" />

        <SeekBar
            android:id="@+id/seek_s6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/seek_s0"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/seek_s5"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/s0_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instructions_settings"
            android:layout_alignTop="@+id/seek_s0"
            android:text="S0" />

        <TextView
            android:id="@+id/s1_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instructions_settings"
            android:layout_alignTop="@+id/seek_s1"
            android:text="S1" />

        <TextView
            android:id="@+id/s2_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instructions_settings"
            android:layout_alignTop="@+id/seek_s2"
            android:text="S2" />

        <TextView
            android:id="@+id/s3_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instructions_settings"
            android:layout_alignTop="@+id/seek_s3"
            android:text="S3" />

        <TextView
            android:id="@+id/s4_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instructions_settings"
            android:layout_alignTop="@+id/seek_s4"
            android:text="S4" />

        <TextView
            android:id="@+id/s5_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instructions_settings"
            android:layout_alignTop="@+id/seek_s5"
            android:text="S5" />

        <TextView
            android:id="@+id/s6_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/instructions_settings"
            android:layout_alignTop="@+id/seek_s6"
            android:text="S6" />
        
        <Button
            android:id="@+id/reset_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/s6_text"
            android:layout_marginTop="20dp"
            android:text="@string/reset_settings" />
                
                
    </RelativeLayout>

</ScrollView>